--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -3,6 +3,8 @@
 	<td><%= image.title %></td>
 	<td><%= image.notes %></td>
 	<td><%= link_to 'Show', image %></td>
-	<td><%= link_to 'Edit', edit_image_path(image) %></td>
-	<td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<% if current_user == image.user %>
+		<td><%= link_to 'Edit', edit_image_path(image) %></td>
+		<td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<% end %>
 </tr>
