--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -14,8 +14,9 @@
 				<strong>Notes:</strong>
 				<%= @image.notes %>
 			</p>
-
-				<%= link_to 'Edit', edit_image_path(@image) %> |
+				<% if current_user == @image.user %>
+					<%= link_to 'Edit', edit_image_path(@image) %> |
+				<% end %>
 				<%= link_to 'Back', images_path %>
 		</div>
 	</div>
