--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,10 +1,7 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="well">
-			<p>
-			  <strong>Image:</strong>
-			  <%= @image.image %>
-			</p>
+				<%= image_tag @image.source %>
 			<p>
 				<strong>Title:</strong>
 				<%= @image.title %>
