--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<div class="hero-unit">
+<div class="jumbotron">
 	<h1>Welcome to Kollate!</h1>
 	<p>
 		<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-primary btn large" %>
+	</p>
+</div>
