--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,10 +1,14 @@
-<tr>
-	<td><%= image.image %></td>
-	<td><%= image.title %></td>
-	<td><%= image.notes %></td>
-	<td><%= link_to 'Show', image %></td>
-	<% if current_user == image.user %>
-		<td><%= link_to 'Edit', edit_image_path(image) %></td>
-		<td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+<div class="box">
+	<%= image_tag image.source %>
+	<p class="description">
+		<%= image.title %>
+	</p>
+	<%= link_to 'Generate Colour Palette', image %>
+		<% if current_user == image.user %>
+			<p>
+				<%= link_to 'Edit', edit_image_path(image) %>
+				<%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
+			</p>
 	<% end %>
-</tr>
+</div>
