--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,22 +1,5 @@
-<h1>Moodboard</h1>
+<h1>Moodboard</h1><br />
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Title</th>
-      <th>Notes</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= render @images %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Image', new_image_path %>
+<div id="images">
+  <%= render @images %>
+</div >
