--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,22 +1,70 @@
-<div class="row">
-	<div class="span6 offset3">
-		<div class="well">
-				<%= image_tag @image.source %>
-			<p>
-				<strong>Title:</strong>
-				<%= @image.title %>
-			</p>
+<html class="no-js" lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-			<p>
-				<strong>Notes:</strong>
-				<%= @image.notes %>
-			</p>
-				<% if current_user == @image.user %>
-					<%= link_to 'Edit', edit_image_path(@image) %> |
-				<% end %>
-				<%= link_to 'Back', images_path %>
-		</div>
-	</div>
+</head>
+<body>
+
+<!-- Mustache templates -->
+<script id='image-section-template' type='text/x-mustache'>
+  {{#images}}
+  <div class="image-section {{class}}">
+    <div class="image-wrap">
+      <button class="run-functions-button">
+        <span class="no-touch-label">Click</span>
+        <span class="touch-label">Tap</span>
+      </button>
+      <img class="target-image" src="{{file}}" />
+    </div>
+    <div class="color-thief-output"></div>
+  </div>
+  {{/images}}
+</script>
+
+<script id="color-thief-output-template" type="text/x-mustache">
+  <div class="function get-color">
+    <h3 class="function-title">Dominant Color</h3>
+    <div class="swatches">
+      <div class="swatch" style="background-color: rgb({{color.0}}, {{color.1}}, {{color.2}})"></div>
+    </div>
+    <div class="function-code">
+      <code>colorThief.getColor(image):{{elapsedTimeForGetColor}}ms</code>
+    </div>
+  </div>
+  <div class="function get-palette">
+    <h3 class="function-title">Palette</h3>
+    <div class="function-output">
+      <div class="swatches">
+        {{#palette}}
+          <div class="swatch" style="background-color: rgb({{0}}, {{1}}, {{2}})"></div>
+        {{/palette}}
+      </div>
+    </div>
+    <div class="function-code">
+      <code>colorThief.getPalette(image):{{elapsedTimeForGetPalette}}ms</code>
+    </div>
+  </div>
+</script>
+
+
+<script src="javascripts/jquery-1.11.1.js"></script>
+<script src="javascripts/mustache.js"></script>
+<script src="javascripts/color-thief.js"></script>
+<script src="javascripts/palette.js"></script>
+
+
+<div class="row">
+<div class="span6 offset3">
+      <%= image_tag @image.source %>
+    <p>
+      <% if current_user == @image.user %>
+        <%= link_to 'Edit', edit_image_path(@image) %> |
+      <% end %>
+      <%= link_to 'Back', images_path %>
+</div>
 </div>
 
+</body>
+</html>
 
