--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,8 +1,9 @@
 <tr>
 	<td><%= project.title %></td>
 	<td><%= project.client %></td>
+	<td><%= project.deadline %></td>
 	<td><%= link_to 'Show', project %></td>
-	<td><%= link_to 'Moodboard', images_path(project) %></td>
+	<td><%= link_to 'Start Moodboard', new_image_path(project) %></td>
 	<% if current_user == project.user %>
 		<td><%= link_to 'Edit', edit_project_path(project) %></td>
 		<td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
