--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,11 @@
 <h1>Projects</h1>
-<legend></legend>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
       <th>Client</th>
-      <th></th>
+      <th>Deadline</th>
     </tr>
   </thead>
 
