--- a/app/views/moodboards/show.html.erb
+++ b/app/views/moodboards/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_moodboard_path(@moodboard) %> |
-<%= link_to 'Back', moodboards_path %>
+<%= link_to 'Edit', edit_project_moodboard_path %> |
+<%= link_to 'Back', project_moodboards_path %>
