--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,30 @@
  */
 
 
-/*Required for jQuery Masonry */
 
+.bg {
+  background: url('/assets/back01.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 350px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.logo {
+	margin-top: -10px;
+}
+
+#signup_box {
+	margin-top: -400px;
+}
+
+.row {
+	padding-top: 60px;
+}
+
+/*Required for jQuery Masonry */
 
 .box {
 	margin: 5px;
@@ -37,11 +59,7 @@
 	border-radius: 5px;
 }
 
-<<<<<<< HEAD
+
 #about {
 	width: 800px;
 }
-
-
-=======
->>>>>>> c27ed90d4745e0c2d1db82c5add0bb84192ab8b4
