--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,11 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-<<<<<<< HEAD
-      <a class="navbar-brand", <%= link_to image_tag("k_small.png"), root_path %></a>
-=======
-      <a class="navbar-brand", <%= link_to image_tag("k_small.png"),root_path %></a>
->>>>>>> c27ed90d4745e0c2d1db82c5add0bb84192ab8b4
+      <a class="navbar-brand", <%= link_to image_tag("k_small.png", {:class => "logo"}), root_path  %></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -31,7 +27,6 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to "Add +", new_image_path %></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
         <% else %>
