--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "Dashboard", dashboard_path %></li>
+        <li><%= link_to "Dashboard", dashboard_path %></li>
         <li><%= link_to "Projects", projects_path %></li>
         <li><%= link_to "Inspiration", inspiration_path %></li>
         <li><%= link_to "About Kollate", about_path %></li>
