--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,8 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
-
+<div class"form-actions">
+  <%= link_to 'New Project', new_project_path, class: "btn btn-primary" %>
+</div>
 
 
