--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,13 @@
  *= require_tree .
  */
 
-
+.maintext {
+  margin-bottom: 100px;
+  font-size: 18px;
+  line-height: 1.2em;
+  font-family: 'Lato', sans-serif;
+  color: black;
+}
 
 .bg {
   background: url('/assets/back01.jpg') no-repeat center center;
@@ -59,7 +65,11 @@
 	border-radius: 5px;
 }
 
-
 #about {
 	width: 800px;
+	margin-bottom: 100px;
+}
+
+#w {
+	margin-bottom: 100px;
 }
