--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
 		<% flash.each do |name, msg| %>
 			<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
 		<% end %>
-	
-		<%= yield %>
-	</div>
 
+		<%= yield %>
+
+	<%= render 'layouts/footer' %>
+	</div>
+	
 </body>
 </html>
