--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,2 +1,4 @@
-<h1>Dashboard</h1>
-<p> Blah blah blah blah </p>
+<div class="dash">
+	<h1>Dashboard</h1>
+	<img src="/assets/Dashboard.jpg" />
+<div>
