--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => 'well form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :name %><br />
@@ -13,10 +13,9 @@
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div class"form-actions">
-    	<%= f.submit "Sign up", class: "btn btn-primary" %>
+  <div class="form-actions">
+    	<%= f.submit "Sign up", class: "btn btn-success" %>
   </div>
 
 <% end %>
 
-<%= render "devise/shared/links" %>
