--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 		
 	<h1>Welcome to Kollate!</h1>
 		<p>
-		<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-primary btn large" %>
+		<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-success" %>
 		</p>
 </div>
 <div class="maintext">
