--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,11 +85,11 @@
 	margin-bottom: 100px;
 }
 
-/*#new_user,
+#new_user,
 #edit_user {
 	margin-top: 60px;
 }
 
 #new_project {
 	margin-bottom: 80px;
-}*/
+}
