--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2083,7 +2083,7 @@ fieldset[disabled] .btn-default.active {
   color: #ffffff;
   background-color: #2fa4e7;
   border-color: #2fa4e7;
-  margin-top: 10px;
+/*  margin-top: 10px;*/
 }
 .btn-primary:hover,
 .btn-primary:focus,
