--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,3 +93,21 @@
 #new_project {
 	margin-bottom: 80px;
 }
+
+#buyers {
+	margin-top: 50px;
+}
+
+#countries {
+	margin-top: 50px;
+	margin-left: 140px;
+}
+
+#websites {
+	margin-left: -100px;
+	margin-top: 30px;
+}
+
+#income {
+	margin-bottom: 50px;
+}
