Added text to front page and about us

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,42 @@
 </div>
 <div class="maintext">
 		<p>
-		Kollate gives designers and project managers an easy way to track and follow project briefs from clients.
-	
-		TECH STORY
+		Kollate is a Content Management System for designers who need a platform to store current projects and link moodboards and notes for research purposes. Images can either be added by upload or a copied URL. A colour generator is linked to each image which produces a colour palette of up to eight choices.
+		</p>
+
+		<h2>Features</h2>
+
+		<p>
+		• Add your brief to a project and include notes<br />
+		• Create a moodboard to track images you sourced for inspiration<br />
+		• Inspiration shows you design ideas drawn from the Dribbble API<br />
+		</p>
+
+		<h2>Gems used</h2>
+		
+		<p>
+		• Devise - for authentication<br />
+		• Carierwave - for image upload<br />
+		• Mini Magick - for resizing images<br />
+		• Bootstrap - for lazy design<br />
+		• Simple Form - for better looking forms but did jack all<br />
+		• Rspec - for testing<br />
+		</p>
+
+		<h2>jQuery plugins</h2>
+		
+		<p>
+		• Masonry - for the layout of the moodboards<br />
+		• Colour Thief - for the colour palette generator<br />
+		• jRibbble - for accessing the Dribbble API<br />
+		</p>
+
+		<h2>Version 2</h2>
+
+		<p>
+		• Integrate AJAX and have infinite scroll on inspiration page<br />
+		• The ability for other users to contribute to your moodboards and add notes to briefs<br />
+		• Integrate a working dashboard with analytics
+		• The ability to delete individual colours from the palette and also to create and save swatches
 		</p>
 </div>
