--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -35,21 +35,21 @@
             new Chart(buyers).Line(buyerData);
             // radar chart data
             var websiteData = {
-							labels : ["Eating","Drinking","Sleeping","Designing","Coding","Partying","Running"],
+							labels : ["Mike","Sarah","James","Tim","Alice","Doug"],
 							datasets : [
 								{
 									fillColor : "rgba(220,220,220,0.5)",
 									strokeColor : "rgba(220,220,220,1)",
 									pointColor : "rgba(220,220,220,1)",
 									pointStrokeColor : "#fff",
-									data : [65,59,90,81,56,55,40]
+									data : [65,59,90,81,56,55]
 								},
 								{
 									fillColor : "rgba(151,187,205,0.5)",
 									strokeColor : "rgba(151,187,205,1)",
 									pointColor : "rgba(151,187,205,1)",
 									pointStrokeColor : "#fff",
-									data : [28,48,40,19,96,27,100]
+									data : [28,48,98,39,96,27]
 								}
 							]
 						};
